# my-reservation

./: .env  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: error.rs  lib.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: reservation.rs  reservation_status.rs
migrations/: 20221207072527_init.down.sql  20221207072527_init.up.sql  20221207073049_reservation.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
